objects/Channel_Business_Review__c.object
<CustomObject>
    <fields>
        <fullName>Notes_2__c</fullName>
        <description>R5 - Notes Section 2</description>
        <inlineHelpText>Additional information about sales and pipeline</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_3__c</fullName>
        <description>R5 - Notes Section 3</description>
        <inlineHelpText>Additional information about actions</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_Operations_Section__c</fullName>
        <description>R5 - Notes Operations Section</description>
        <inlineHelpText>Additional information about operations/logistics</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Record_Type_Value__c</fullName>
        <label>Old Record Type Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Answer_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Operations Answer Review Open Cases</description>
        <inlineHelpText>Indicate here when done by selecting the checkbox</inlineHelpText>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations_Answer_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Operations Answer 2 Review of supply/ logistical related topics</description>
        <inlineHelpText>Indicate here when done by selecting the checkbox</inlineHelpText>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations_Answer_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Operations Answer 3 Review and update ABB contacts</description>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <formula>( Relationship_Status_DIV__c + Total_Score__c) /  (Maximum_Possible_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PG_s_Covered_Hidden__c</fullName>
        <description>R6</description>
        <label>PG&apos;s Covered Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_s_Covered__c</fullName>
        <description>R5 - PG&apos;s Covered</description>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, Joint_Business_Plan__r.PG_s_Covered__c,PG_s_Covered_Hidden__c)</formula>
        <inlineHelpText>Values based on the chosen Product Mix under the Market Scope</inlineHelpText>
        <label>PG&apos;s Covered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Answer_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 -  Check box to capture Contact and Review update</description>
        <inlineHelpText>Review and update &quot;Contact Roles&quot; section under this Account. Notify Channel Manager if effects access rights to ABB tools. Check also contacts as indicated in Business plan. Check box when done.</inlineHelpText>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Flag1__c</fullName>
        <description>R5-R5 - Flag for Must Have Question 1 in Partner section</description>
        <formula>IF(Partner_Answer_1__c = FALSE,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Question_1__c</fullName>
        <defaultValue>$Label.CBR_Partner_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 1- Partner resources section</description>
        <inlineHelpText>Review and update &quot;Contact Roles&quot; section under this Account. Notify Channel Manager if effects access rights to ABB tools. Check also contacts as indicated in Business plan.</inlineHelpText>
        <label>1.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country_Hidden__c</fullName>
        <description>R6</description>
        <label>Primary Address Country Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <description>R5 - Copies Primary Address from Account</description>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, TEXT( Account__r.Primary_Address_Country__c ), Primary_Address_Country_Hidden__c)</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Channel_Class_Hidden__c</fullName>
        <description>R6</description>
        <label>Primary Channel Class Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Channel_Class__c</fullName>
        <description>R5 - Primary Channel Class from Channel Partner Business Plan</description>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, Joint_Business_Plan__r.Primary_Channel_Class__c, Primary_Channel_Class_Hidden__c)</formula>
        <label>Primary Channel Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Hidden_from_scope__c</fullName>
        <label>Product Line Hidden from scope</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <defaultValue>$Label.CBR_Market_Question_1</defaultValue>
        <description>R5- View on market trend in the next 6 months (total market), compared to previous 6 months-Market trends and offering - Partner view section</description>
        <inlineHelpText>Partner view on expected sales trend for the next 6 months (total market); compared to the previous 6 months. Please indicate also market trend per focused industry further down the form.</inlineHelpText>
        <label>1.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <defaultValue>$Label.CBR_Market_Question_2</defaultValue>
        <description>R5 -  Market trends and offering - Partner view section</description>
        <inlineHelpText>Partner view on change of ABB position against competitor products/offerings over past 6 months</inlineHelpText>
        <label>2.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_3__c</fullName>
        <defaultValue>$Label.CBR_Market_Question_3</defaultValue>
        <description>R5 - Progress on expanding portfolio as indicated in the portfolio survey - Market trends and offering - Partner view section</description>
        <inlineHelpText>Progress on expanding the ABB portfolio as indicated in the business plan</inlineHelpText>
        <label>3.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Operations_1__c</fullName>
        <defaultValue>$Label.CBR_Operations_Question_1</defaultValue>
        <description>R5 - Text field to capture the Question 1- Operations Review</description>
        <inlineHelpText>e.g. NPS, CCRP. Assign actions as needed</inlineHelpText>
        <label>1.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_Operations_2__c</fullName>
        <defaultValue>$Label.CBR_Operations_Question_2</defaultValue>
        <description>R5 - Text field to capture the Question 2- Operations Review</description>
        <inlineHelpText>Delivery performance, stocking situation, process review/improvements. Assign actions as needed</inlineHelpText>
        <label>2.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Status_DIV__c</fullName>
        <formula>IF( Joint_Business_Plan__r.Channel_Market_Coverage__r.Relationship_Status_Quatnifiaction__c + (Account__r.Market_Scopes_BU_Count_Hidden__c /2) &gt;= 5,5, FLOOR( Joint_Business_Plan__r.Channel_Market_Coverage__r.Relationship_Status_Quatnifiaction__c + (Account__r.Market_Scopes_BU_Count_Hidden__c /2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated Field based on Number of BUs covered by Market Scopes of Account plus Relationship Status of Market Scope. Score between 0 and 5.</inlineHelpText>
        <label>Relationship  Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resources_Contacts_Question_2__c</fullName>
        <defaultValue>$Label.CBR_Partner_Question_2</defaultValue>
        <description>R5 -  Text field to capture the Question 2- Resources and Partner Section</description>
        <label>2.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resources_Contacts_Question_3__c</fullName>
        <defaultValue>$Label.CBR_Partner_Question_3</defaultValue>
        <description>R5 - Text field to capture the Question 3- Resources and Partner Section</description>
        <label>3.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Root_Account_GUID__c</fullName>
        <formula>Account__r.Root_Account_GUID__c</formula>
        <label>Root Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Rate_Current_Year_Hidden__c</fullName>
        <label>Run Rate Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rund_Rate_Current_Year__c</fullName>
        <description>R5 - Copy the run rate from the channel business plan</description>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, Joint_Business_Plan__r.Rund_Rate_Ongoing_year_Formula__c, Run_Rate_Current_Year_Hidden__c)</formula>
        <label>Run Rate Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Runrate_vs_Budget_Score__c</fullName>
        <description>R6</description>
        <formula>IF ( Budget_Current_Year__c ==0 , 0, 
	IF (Sales_YTD_Compared_to_Budget__c &lt; -0.75, 0, IF (Sales_YTD_Compared_to_Budget__c &lt; -0.50, 1, IF (Sales_YTD_Compared_to_Budget__c &lt; -0.25, 2,
IF (Sales_YTD_Compared_to_Budget__c &lt; 0, 3, IF (Sales_YTD_Compared_to_Budget__c &lt; 0.20, 4, 5))))))</formula>
        <inlineHelpText>Autocalculated score from 0 to 5. Meeting budget gives a 4, 20% over budget is 5.</inlineHelpText>
        <label>Runrate vs Budget Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>STR_Actual_Year_to_sales_Hidden__c</fullName>
        <description>It is Created for to display &quot; Actual Sales Year to Date value &quot; In CBR</description>
        <formula>(Joint_Business_Plan__r.Actual_Sales_Year_to_Date_Formula__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Actual Year to sales Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STR_Budget_Current_Year_Hidden__c</fullName>
        <formula>Joint_Business_Plan__r.Budget_Current_Year_formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Budget Current Year Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STR_Forecast_Current_Year_Hidden__c</fullName>
        <formula>Joint_Business_Plan__r.Forecast_Ongoing_Year_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Forecast Current Year	 Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STR_Previous_Year_Hideen__c</fullName>
        <formula>Joint_Business_Plan__r.Previous_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Previous Year Hideen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STR_Run_Rate_Current_Year_Hidden__c</fullName>
        <formula>Joint_Business_Plan__r.Rund_Rate_Ongoing_year_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Run Rate Current Year Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STR_Sales_Previous_Year_Hidden__c</fullName>
        <formula>Joint_Business_Plan__r.Sales_previous_year_formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Sales Previous Year Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STR_Target_2nd_Year_Hidden__c</fullName>
        <formula>Joint_Business_Plan__r.Target_2nd_Year_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Target 2nd Year Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STR_Target_3rd_Year_Hidden__c</fullName>
        <formula>Joint_Business_Plan__r.Target_3rd_Year_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>STR Target 3rd Year Hidden</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>STS_Community_XA_Contracts__c</fullName>
        <description>STS PR2.0 Formula field to set up XA- Contracts</description>
        <formula>HYPERLINK(&quot;/abbpartners/apex/Apttus__DocumentGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Document&amp;templateType=Channel Partner Business Review&quot;,&quot;Generate&quot;)</formula>
        <inlineHelpText>Click GENERATE button to create a standard format file from the content. You can choose between several file formats and languages. In community Portal Users</inlineHelpText>
        <label>Print Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Answer_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Confirmed -click -Sales and pipeline review</description>
        <inlineHelpText>On Business plan -form, section &quot;Channel Sales Plan&quot;, update fields Actual YTD (+ date) and forecast ongoing year. Indicate here when done by selecting the checkbox.</inlineHelpText>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Answer_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5-Sales and pipeline review section</description>
        <inlineHelpText>Review all open opportunities with the partner and update info as needed. Ensure that relevant opportunities are also registered in this tool. Indicate here when done by selecting the checkbox.</inlineHelpText>
        <label>Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Answer_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5-Sales and pipeline review section</description>
        <inlineHelpText>Review all open opportunities with the partner and update info as needed. Ensure that relevant opportunities are also registered in this tool. Indicate here when done by selecting the checkbox.</inlineHelpText>
        <label>Answer 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Flag1__c</fullName>
        <description>R5 - Flag for Must Have Question 1 in Sales section</description>
        <formula>IF(Sales_Answer_1__c = FALSE,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Flag2__c</fullName>
        <description>R5 - Flag for Must Have Question 2 in Sales section</description>
        <formula>IF( Sales_Answer_2__c == FALSE, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Flag3__c</fullName>
        <description>R5 - Flag for Must Have Question 3 in Sales section</description>
        <formula>IF(Sales_Answer_3__c = FALSE,IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),&quot;&quot;)</formula>
        <label>!</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Previous_Year_Hidden__c</fullName>
        <label>Sales Previous Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Previous_Year__c</fullName>
        <description>R5 - Sales Previous Year formula field to copy from CBP</description>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, Joint_Business_Plan__r.Sales_previous_year_formula__c, Sales_Previous_Year_Hidden__c)</formula>
        <label>Sales Previous Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Question_1__c</fullName>
        <defaultValue>$Label.CBR_Sales_Question_1</defaultValue>
        <description>R5 - Update Sales Status, target, forecast -  Sales and pipeline review section</description>
        <inlineHelpText>Under Sales Targets and Results in  Business plan, update fields Actual YTD (+ date) and Forecast current year. Indicate here when done. Tip: use Mass Edit functionality..</inlineHelpText>
        <label>1.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Question_2__c</fullName>
        <defaultValue>$Label.CBR_Sales_Question_3</defaultValue>
        <description>R5 - Text field to capture the Question 2- Sales and pipeline review section</description>
        <inlineHelpText>Review all open opportunities with the partner and update info as needed. Ensure that relevant opportunities are also registered in this tool. Indicate here when done.</inlineHelpText>
        <label>2.</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Question_3__c</fullName>
        <defaultValue>$Label.CBR_Sales_Question_3</defaultValue>
        <description>R5 - Text field to capture the Question 3- Sales and pipeline review section</description>
        <inlineHelpText>Review all open opportunities with the partner and update info as needed. Ensure that relevant opportunities are also registered in this tool. Indicate here when done.</inlineHelpText>
        <label>Question 3</label>
        <length>260</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_YTD_Compared_to_Budget_Hidden__c</fullName>
        <label>Runrate vs Budget (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_YTD_Compared_to_Budget__c</fullName>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, 
IF (Joint_Business_Plan__r.Budget_Current_Year_formula__c == 0, 0, (Joint_Business_Plan__r.Rund_Rate_Ongoing_year_Formula__c -  Joint_Business_Plan__r.Budget_Current_Year_formula__c) /Joint_Business_Plan__r.Budget_Current_Year_formula__c),
Sales_YTD_Compared_to_Budget_Hidden__c)</formula>
        <label>Runrate vs Budget (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_YTD_Compared_to_Forecast_Hidden__c</fullName>
        <label>Runrate vs Forecast (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_YTD_Compared_to_Forecast__c</fullName>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, 
IF (Joint_Business_Plan__r.Forecast_Ongoing_Year_Formula__c == 0, 0, ((Joint_Business_Plan__r.Rund_Rate_Ongoing_year_Formula__c - Joint_Business_Plan__r.Forecast_Ongoing_Year_Formula__c)/Joint_Business_Plan__r.Forecast_Ongoing_Year_Formula__c))
, Sales_YTD_Compared_to_Forecast_Hidden__c)</formula>
        <label>Runrate vs Forecast (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_YTD_Compared_to_Last_Year_Hidden__c</fullName>
        <label>Runrate vs Last Year (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_YTD_Compared_to_Last_Year__c</fullName>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, 
IF (Joint_Business_Plan__r.Sales_previous_year_formula__c == 0, 0, ((Joint_Business_Plan__r.Rund_Rate_Ongoing_year_Formula__c - Joint_Business_Plan__r.Sales_previous_year_formula__c)/Joint_Business_Plan__r.Sales_previous_year_formula__c))
, Sales_YTD_Compared_to_Last_Year_Hidden__c)</formula>
        <label>Runrate vs Last Year (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Secondary_Channel_Class_Hidden__c</fullName>
        <description>R6</description>
        <label>Secondary Channel Class Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Channel_Class__c</fullName>
        <description>R5 - Secondary Channel Class from Channel Partner Business Plan</description>
        <formula>IF(TEXT(Status__c) == &apos;Draft&apos; || TEXT(Status__c) == &apos;&apos;, Joint_Business_Plan__r.Secondary_Channel_Class__c, Secondary_Channel_Class_Hidden__c)</formula>
        <label>Secondary Channel Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_focus__c</fullName>
        <description>R6 - Used for Channel Network Evaluation
No Integration Usage
No Code Usage</description>
        <inlineHelpText>How well the partner focuses on the industries as definied in the business plan. 0=Not at all, 5=Entirely</inlineHelpText>
        <label>Segment focus</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>R5 - Status</description>
        <inlineHelpText>Change status or send to approval when completed. Note that fields indicated with ! (exclamation mark) must first be completed.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplementary_Activities_Score__c</fullName>
        <description>R6 - USed for Channel Network Evaluation</description>
        <formula>IF (Supplementary_Activities__c &gt;= 5, 5, Supplementary_Activities__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Autocalculated score 1 - 5. Sums up the number of channel classes and Customer Bases in Market Scope</inlineHelpText>
        <label>Supplementary Activities Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplementary_Activities__c</fullName>
        <formula>IF( TEXT(Joint_Business_Plan__r.Channel_Market_Coverage__r.Primary_Channel_Class__c) != NULL , 1 , 0) +

(IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Secondary_Channel_Class_2__c, &quot;EngineeringProcurement&amp;Construction(EPC)&quot;), 1, 0) + 
IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Secondary_Channel_Class_2__c, &quot;Distributor (DIS)&quot;), 1, 0) + 
IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Secondary_Channel_Class_2__c, &quot;Installer (INST)&quot;), 1, 0) + 
IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Secondary_Channel_Class_2__c, &quot;Original Equipment Manufacturer (OEM)&quot;), 1, 0) +
IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Secondary_Channel_Class_2__c, &quot;Panel builder (PBL)&quot;), 1, 0) +
IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Secondary_Channel_Class_2__c, &quot;Service Provider (SPRO)&quot;), 1, 0) +
IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Secondary_Channel_Class_2__c, &quot;System integrator (SYIN)&quot;), 1, 0)  + 
IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Secondary_Channel_Class_2__c, &quot;Technical distributor (TDIS)&quot;), 1, 0)) +

(IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Customer_Base__c, &quot;End users&quot;), 1, 0) + 
IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Customer_Base__c, &quot;OEMs&quot;), 1, 0) + 
IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Customer_Base__c, &quot;EPCs&quot;), 1, 0) + 
IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Customer_Base__c, &quot;System integrators&quot;), 1, 0) +
IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Customer_Base__c, &quot;Installers&quot;), 1, 0) +
IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Customer_Base__c, &quot;Panel builders&quot;), 1, 0) +
IF(INCLUDES(Joint_Business_Plan__r.Channel_Market_Coverage__r.Customer_Base__c, &quot;Distributors&quot;), 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplementary Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Actions_Completed__c</fullName>
        <description>R5 - Contains the number of actions are &quot;Completed&quot; status. Field is updated thru trigger &quot;ClsTriggerChannelBusinessReview&quot; - KAD-01052</description>
        <label>Total Number of Actions Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Actions_In_Progress__c</fullName>
        <description>R5 - Contains the number of actions are &quot;In Progress&quot; status. Field is updated thru trigger &quot;ClsTriggerChannelBusinessReview&quot; - KAD-01052</description>
        <label>Total Number of Actions In Progress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <description>R6: Addition of following fields:
Expressed Enthusiasm	- Answer 3	- Sales enabler availability	- Inventory sufficient to end customer needs	- Actual Sales Year to Date	- Runrate vs Budget	- Geographical Focus	- Segment Focus	- Availability of Sales resources	- Availability of Technical resources	- Availability of Service resources	- Level of Competency	- Competing Lines in Portfolio	- Financial Position</description>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD_Conversion_Rate__c</fullName>
        <description>R6</description>
        <label>USD Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XA_Contracts__c</fullName>
        <description>R5 Formula field to set up XA- Contracts</description>
        <formula>HYPERLINK(&quot;/apex/Apttus__DocumentGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Document&amp;templateType=Channel Partner Business Review&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Click GENERATE button to create a standard format file from the content. You can choose between several file formats and languages.</inlineHelpText>
        <label>Print Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>market_Scope_Channel_Class_Hideen__c</fullName>
        <description>It  is created for X-Author Document to populate the Channel class values in Channel Partner Business Review</description>
        <formula>(TEXT(Joint_Business_Plan__r.Channel_Market_Coverage__r.Primary_Channel_Class__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>market Scope Channel Class Hideen</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Channel_partner_Business_Reviews__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Channel partner Business Reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>statusBP__c</fullName>
        <label>statusBP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Channel Partner Business Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channel Partner Business Reviews</pluralLabel>
    <recordTypes>
        <fullName>Channel_Business_Review_Default</fullName>
        <active>true</active>
        <description>R5 Channel Business Review Default Record Type</description>
        <label>Channel Business Review Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Channel_End_Period_Business_Review</fullName>
        <active>true</active>
        <description>Review done in the end of planning period to &quot;close the planning period&quot;. After the review, a new plan for upcoming period is typically generated. ABB persons involved are normally sales responsible and Channel Manager</description>
        <label>End-Period Business Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Channel_End_Period_Business_Review_Detail</fullName>
        <active>true</active>
        <description>Review done in the end of planning period to &quot;close the planning period&quot;. After the review, a new plan for upcoming period is typically generated. ABB persons involved are normally sales responsible and Channel Manager</description>
        <label>End-Period Business Review Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Channel_Mid_Period_Business_Review</fullName>
        <active>true</active>
        <description>Review done during the planning period. In addition to normal sales review, target is also to check/ adjust the direction compared to plan. Typically executed by sales persons responsible for supporting the sales of the partner.</description>
        <label>Mid-Period Business Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Channel_Mid_Period_Business_Review_Detail</fullName>
        <active>true</active>
        <description>Review done during the planning period. In addition to normal sales review, target is also to check/ adjust the direction compared to plan. Typically executed by sales persons responsible for supporting the sales of the partner.</description>
        <label>Mid-Period Business Review Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Channel_Business_Review</fullName>
        <active>true</active>
        <description>R5 - Closed Channel Business Review</description>
        <label>Closed Channel Business Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closed_Mid_Period_Business_Review</fullName>
        <active>true</active>
        <label>Closed Mid Period Business Review</label>
    </recordTypes>
</CustomObject>